--- a/wypozyczalnia/src/main/resources/fxml/Reservation.fxml
+++ b/wypozyczalnia/src/main/resources/fxml/Reservation.fxml
@@ -199,7 +199,7 @@
                                         <Insets bottom="300.0" right="650.0" />
                                     </StackPane.margin>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="217.0" text="LISTA KLIENTÓW">
+                                <Button mnemonicParsing="false" onAction="#showEditClientList" prefHeight="31.0" prefWidth="217.0" text="LISTA KLIENTÓW">
                                     <cursor>
                                         <Cursor fx:constant="OPEN_HAND" />
                                     </cursor>
@@ -207,7 +207,7 @@
                                         <Insets bottom="400.0" left="50.0" right="400.0" top="300.0" />
                                     </StackPane.margin>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="217.0" text="LISTA PRACOWNIKÓW">
+                                <Button mnemonicParsing="false" onAction="#showEditEmployeeList" prefHeight="31.0" prefWidth="217.0" text="LISTA PRACOWNIKÓW">
                                     <cursor>
                                         <Cursor fx:constant="OPEN_HAND" />
                                     </cursor>
@@ -235,7 +235,7 @@
                                         <Insets bottom="200.0" left="650.0" right="50.0" />
                                     </StackPane.margin>
                                 </TextField>
-                                <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="217.0" text="LISTA POJAZDÓW" StackPane.alignment="CENTER">
+                                <Button mnemonicParsing="false" onAction="#showEditVehicleList" prefHeight="31.0" prefWidth="217.0" text="LISTA POJAZDÓW" StackPane.alignment="CENTER">
                                     <cursor>
                                         <Cursor fx:constant="OPEN_HAND" />
                                     </cursor>
